--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 <section class="bg-dark text-light p-5" id="about">
     <div class="container">
         <h2 class="text-center ">Our Team</h2>
-        <p class="lead text-center mb-5">A team buid by Anees MHD and Anavadh Suresh.</p>
+        <p class="lead text-center mb-5">A team build by Anees Ak and Anavadh Suresh.</p>
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
                 <div class="card bg-light">
