--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <section class="bg-warning text-dark p-5 ">
     <div class="container">
         <div class="d-md-flex justify-content-between align-items-center">
-            <h3 class="mb-3 mb-md-0 ">Notify you when its in Stock</h3>
+            <h3 class="mb-3 mb-md-0 ">Notify when its in Stock</h3>
             <div class="input-group input-new">
                 <input type="text" class="form-control" placeholder="Enter Email Address" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Notify</button>
@@ -103,10 +103,10 @@
 </scetion>
 <!--boxess-->
 <section class="p-5" id="shop">
-    <div class="container">
-        <div class="row text-center justify-content-between">
-            <div class="col-md">
-         <div class="card mb-3 mx-5" style="width: 18rem;">
+    <div class="container pe-sm-4">
+        <div class="row g-4 rrl  text-center">
+            <div class="col-md-6 col-lg-3">
+         <div class="card mb-3 mx-2" style="width: 18rem;" >
                 <img src="./rn11-pro-5g-black.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Redmi Note 11Pro</h5>
@@ -114,8 +114,8 @@
                   <a href="#" class="btn btn-warning">+ Add To Cart<i class="fa-solid fa-cart-shopping"></i></a>
                 </div>
              </div></div>
-            <div class="col-md">
-                <div class="card mb-3 mx-5" style="width: 18rem;" >
+            <div class="col-md-6 col-lg-3">
+                <div class="card mb-3 mx-2" style="width: 18rem;" >
                     <img src="./11s.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Redmi Note 11S</h5>
@@ -126,8 +126,8 @@
 
 
             </div>
-            <div class="col-md">
-                <div class="card mb-3 mx-5" style="width: 18rem;">
+            <div class="col-md-6 col-lg-3">
+                <div class="card mb-3 mx-2" style="width: 18rem;">
                     <img src="./note 9.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Redmi Note 9</h5>
@@ -138,8 +138,8 @@
             </div>
 
 
-            <div class="col-md">
-                <div class="card mb-3 mx-5" style="width: 18rem;">
+            <div class="col-md-6 col-lg-3">
+                <div class="card mb-3 mx-2" style="width: 18rem;">
                        <img src="./rn11-pro-5g-black.png" class="card-img-top" alt="...">
                        <div class="card-body">
                          <h5 class="card-title">Redmi Note 11Pro</h5>
@@ -147,8 +147,8 @@
                          <a href="#" class="btn btn-warning">+ Add To Cart<i class="fa-solid fa-cart-shopping"></i></a>
                        </div>
                     </div></div>
-                   <div class="col-md">
-                       <div class="card mb-3 mx-5" style="width: 18rem;" >
+                   <div class="col-md-6 col-lg-3">
+                       <div class="card mb-3 mx-2" style="width: 18rem;" >
                            <img src="./11s.png" class="card-img-top" alt="...">
                            <div class="card-body">
                              <h5 class="card-title">Redmi Note 11S</h5>
@@ -159,10 +159,10 @@
        
        
                    </div>
-                   <div class="col-md">
-                       <div class="card mb-3 mx-5" style="width: 18rem;">
+                   <div class="col-md-6 col-lg-3">
+                       <div class="card mb-3 mx-2" style="width: 18rem;">
                            <img src="./note 9.png" class="card-img-top" alt="...">
-                           <div class="card-body">
+                           <div class="card-body me-3">
                              <h5 class="card-title">Redmi Note 9</h5>
                              <p class="card-text">4G Scarlet Blood 4GB+64GB <span class="text-danger">₹15,499</span></p>
                              <a href="#" class="btn btn-warning">+ Add To Cart<i class="fa-solid fa-cart-shopping"></i></a>
@@ -261,7 +261,7 @@
     </div>
 </section>
 
-<!--the real final-->
+<!--About-->
 <section class="bg-dark text-light p-5" id="about">
     <div class="container">
         <h2 class="text-center ">Our Team</h2>
